nux-admin/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nux-admin
  namespace: nux
  labels:
    application: nux-admin
spec:
  selector:
    application: nux-admin
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 80
