nux-admin/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nux-admin
  namespace: nux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nux-admin.mad.itera.no
    http:
      paths:
      - backend:
          serviceName: nux-admin
          servicePort: 7070
        path: /
  tls:
  - hosts:
    - nux-admin.mad.itera.no
    secretName: tls-secret
